k8s/kalah-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kalah-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: kalah-api
          image: jamespatten1/kalah-api
          imagePullPolicy: IfNotPresent
