k8s/kalah-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kalah-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kalah-web
  template:
    metadata:
      labels:
        component: kalah-web
    spec:
      containers:
        - name: kalah-web
          image: jamespatten1/kalah-web
