k8s/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-deployment
  labels:
    component: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      component: keycloak
  template:
    metadata:
      labels:
        component: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:10.0.1
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config    
        command: ["/opt/jboss/keycloak/bin/standalone.sh"]
        args: ["-b","0.0.0.0","-Dkeycloak.migration.action=import","-Dkeycloak.migration.provider=singleFile","-Dkeycloak.migration.file=/etc/config/all.json","-Dkeycloak.migration.strategy=OVERWRITE_EXISTING"]
      volumes:
      - name: config-volume
        configMap:
          name: keycloak-config
