k8s/kalah-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kalah-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: kalah-api
  ports:
    - port: 8081
      targetPort: 8081
