k8s/kalah-web-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kalah-web-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 80
      targetPort: 80
