k8s/kalah-web-ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kalah-web-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kalah-web
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: kalah-web-cluster-ip-service
              servicePort: 80
