k8s/keycloak-ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak-ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  rules:
    - host: keycloak
      http:
        paths:   
          - path: /
            backend:
              serviceName: keycloak
              servicePort: 80
